Meta tags added, local fonts hosted, favicons generated, links in footer updated

--- a/index.html
+++ b/index.html
@@ -3,6 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/favicon.svg" />
+    <!-- about site -->
+    <meta name="description" content="Hi my name is Aryan Srivastava, I'm a software developer and a student." />
+    <meta name="keywords" content="Aryan Srivastava, Aryan, Srivastava, web developer, web, aryan" />
+    <meta name="author" content="Aryan Srivastava" />
+    <meta name="theme-color" content="#000000" />
+    <!-- social media -->
+    <meta property="og:title" content="Aryan Srivastava" />
+    <meta property="og:description" content="Hi my name is Aryan Srivastava, I'm a software developer and a student." />
+    <meta property="og:image" content="/favicon.svg" />
+    <meta property="og:url" content="https://aryansri.me" />
+    <meta property="og:site_name" content="Aryan Srivastava" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@Aryan_Sri_" />
+    <meta name="twitter:creator" content="@Aryan_Sri_" />
+    <meta name="twitter:title" content="Aryan Srivastava" />
+    <meta name="twitter:description" content="Hi my name is Aryan Srivastava, I'm a software developer and a student." />
+    <meta name="twitter:image" content="/favicon.svg" />
+    <meta name="twitter:image:alt" content="Aryan Srivastava" />
+    <!-- title -->
     <title>Aryan Srivastava</title>
   </head>
   <body>
