--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <!-- about site -->
-    <meta name="description" content="Hi my name is Aryan Srivastava, I'm a software developer and a student." />
+    <meta name="description" content="Hi my name is Aryan Srivastava, I'm a self-taught software developer." />
     <meta name="keywords" content="Aryan Srivastava, Aryan, Srivastava, web developer, web, aryan" />
     <meta name="author" content="Aryan Srivastava" />
     <meta name="theme-color" content="#000000" />
     <!-- social media -->
     <meta property="og:title" content="Aryan Srivastava" />
-    <meta property="og:description" content="Hi my name is Aryan Srivastava, I'm a software developer and a student." />
+    <meta property="og:description" content="Hi my name is Aryan Srivastava, I'm a self-taught software developer." />
     <meta property="og:image" content="/favicon.svg" />
     <meta property="og:url" content="https://aryansri.me" />
     <meta property="og:site_name" content="Aryan Srivastava" />
@@ -21,7 +22,7 @@
     <meta name="twitter:site" content="@Aryan_Sri_" />
     <meta name="twitter:creator" content="@Aryan_Sri_" />
     <meta name="twitter:title" content="Aryan Srivastava" />
-    <meta name="twitter:description" content="Hi my name is Aryan Srivastava, I'm a software developer and a student." />
+    <meta name="twitter:description" content="Hi my name is Aryan Srivastava, I'm a self-taught software developer." />
     <meta name="twitter:image" content="/favicon.svg" />
     <meta name="twitter:image:alt" content="Aryan Srivastava" />
     <!-- title -->
