feat: publytics for analytics.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     <meta name="twitter:description" content="Hi my name is Aryan Srivastava, I'm a self-taught software developer." />
     <meta name="twitter:image" content="/favicon.svg" />
     <meta name="twitter:image:alt" content="Aryan Srivastava" />
+    <script defer data-domain="aryansri.vercel.app/VE5OtU" src="https://api.publytics.net/js/script.manual.min.js"></script>
+    <script>
+        window.publytics = window.publytics || function() { (window.publytics.q = window.publytics.q || []).push(arguments) };
+        publytics('pageview');
+    </script>
     <!-- title -->
     <title>Aryan Srivastava</title>
   </head>
